tools/tests/errors/bigint_zero_neg_pow.ki
discard import("int").BigInt(0) ** (0-1)
